Some fixing here

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <div class="card">
                 <div class="card-body">
                     <!-- STEP 1 -->
-                    <h3>Step 1. Acquire a Contabo VPS</h3>
+                    <h3>Step 1. Acquire a SecureSRV VPS</h3>
                     <p>Everyone knows that
-                        <a href="https://contabo.com/">Contabo</a> is the number one source of premium virtual
+                        <a href="https://securesrv.io/">SecureSRV</a> is the number one source of premium virtual
                         private servers (and also the cheapest).</p>
                     <p>Find the nearest credit card from your parent's wallets and buy yourself a server. Look for
                         the one with the most ram
@@ -198,7 +198,7 @@
                     <h3>Step 8. Use Cloudflare</h3>
                     <p>The market is extremely competitive, so it is crucial not to give away your actual provider.
                         You wouldn't want your
-                        competitors to find out your Contabo VPS, wouldn't you? Use Cloudflare to manage your domain
+                        competitors to find out your SecureSRV VPS, wouldn't you? Use Cloudflare to manage your domain
                         and turn that orange
                         cloud on.</p>
                     <p>Lie that you own the hardware. It is a good marketing strategy after all. If your clients are
