--- a/index.html
+++ b/index.html
@@ -275,8 +275,12 @@
                         avoiding these hosts if possible.</p>
                     <hr>
                     <ul>
+						<li data-placement="left" data-toggle="tooltip" title="director owns a bad install script and bans anyone who dares to say otherwise, his servers feature premium downtime and are resold from contabo">
+                            <a href="https://securesrv.io">SecureSRV.io</a>
+						</li>
                         <li data-placement="left" data-toggle="tooltip" title="”CEO” is very entitled, cocky, rude, and toxic. Lies about his hardware. Doesn’t even have a proper website...essentially runs everything out of his discord server. You can literally go into his website directory and find a bunch of templates he’s downloaded most likely for future use.">
                             <a href="https://discord.gg/tScBE9M">PingNode.eu</a>
+						</li>
                         <li data-placement="left" data-toggle="tooltip" title="Owners are extremely salty. Uses default everything on their website. Had a .nl domain but changed it to .eu. Owners spam emails and claim “our website is near completion” also at one point said they developed their billing panel which is obviously just default WHMCS...">
                             <a href="https://Iwa-hosting.eu">IWA-Hosting.eu</a>
                         </li>
